[package]
name = "secret_music_bot"
version = "1.0.0"
edition = "2021"
authors = ["@its_me_secret"]
description = "Premium Telegram Music Bot powered by JioSaavn"

[dependencies]
ferogram = "0.5"
ntgcalls = { git = "https://github.com/YouKnow-sys/ntgcalls-rs.git" }
mongodb = "2.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
chrono = "0.4"
des = "0.9"
ecb = "0.2"
cipher = "0.5"
base64 = "0.22"
lazy_static = "1.4"
dashmap = "5.5"
tokio-util = "0.7"
urlencoding = "2.1"
